<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/field_email"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/field_password"
        android:layout_gravity="center_horizontal"
        android:ems="10"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:id="@+id/text_forgot_password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_in"
        android:text="@string/sign_in"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:text="@string/or"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>